# sehn

./: .clang-format  .gitignore  .mailmap  AUTHORS  COPYING  ChangeLog  README.md  TODO  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md  todo.md
.github/workflows/: aur.yml  copr.yml  ppa.yml  pr-check.yml  release.yml
config/: keys.toml  sehnrc.toml  themes.toml
examples/: keys.toml  sehnrc.toml
man/: meson.build  sehn.pre
share/applications/: meson.build  sehn.desktop
share/fonts/: install_font.sh  meson.build
share/images/: meson.build
src/: audio.cpp  audio.h  buttons.cpp  buttons.h  camera.cpp  camera.h  capture.cpp  capture.h  cli.cpp  cli.h  config.cpp  config.h  exif.cpp  exif.h  files.cpp  files.h  input.cpp  input.h  keys.cpp  keys.h  list.cpp  list.h  main.cpp  menu.cpp  menu.h  meson.build  overlay.cpp  overlay.h  panel.cpp  panel.h  resources.h  sehn.cpp  sehn.h  signals.cpp  signals.h  theme.cpp  theme.h  toml.cpp  toml.h  ui.cpp  (+7 more)
subprojects/: tomlc99.wrap
subprojects/packagefiles/tomlc99/: meson.build
