sources = files(
  'main.cpp',
  'sehn.cpp',
  'version.cpp',
  'config.cpp',
  'cli.cpp',
  'signals.cpp',
  'list.cpp',
  'camera.cpp',
  'ui.cpp',
  'panel.cpp',
  'overlay.cpp',
  'capture.cpp',
  'cli.cpp',
  'files.cpp',
  'keys.cpp',
  'input.cpp',
)

executable('sehn',
  sources,
  dependencies : deps,
  include_directories : include_directories('.'),
  install : true)
