sources = files(
  'main.cpp',
  'sehn.cpp',
  'version.cpp',
  'config.cpp',
  'cli.cpp',
  'signals.cpp',
  'list.cpp',
  'camera.cpp',
  'ui.cpp',
  'panel.cpp',
  'overlay.cpp',
  'capture.cpp',
  'files.cpp',
  'keys.cpp',
  'input.cpp',
  'exif.cpp',
  'video.cpp',
  'audio.cpp',
  'utils.cpp',
  'theme.cpp',
  'menu.cpp',
)

executable('sehn',
  sources,
  dependencies : deps,
  include_directories : include_directories('.'),
  install : true)
